<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity"

    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo_de_la_app"
        />

    <TextView
        android:id="@+id/textLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/az_animex"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:textSize="48sp"
        android:fontFamily="@font/orbitron_bold"
        />

    <TextView
        android:id="@+id/textSlogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nuestro_mundo_mas_ligero"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLogo"
        app:layout_constraintVertical_bias="0.113"
        tools:layout_editor_absoluteX="0dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:fontFamily="@font/orbitron_bold"/>
</androidx.constraintlayout.widget.ConstraintLayout>